samples/_failures_safe/1761252134_5655c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d5a50a9.c: In function ‘main’:
./samples/SAFE/__tmp_4d5a50a9.c:167:25: error: missing terminating " character
  167 |         fprintf(stderr, "Error reading
      |                         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_4d5a50a9.c:167:9: error: expected expression at end of input
  167 |         fprintf(stderr, "Error reading
      |         ^~~~~~~
./samples/SAFE/__tmp_4d5a50a9.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4d5a50a9.c:167:9: error: expected declaration or statement at end of input
